# msrch

./: .gitignore  ADDING_LANGUAGES.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  grok-review.md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: dates.rs  main.rs  output.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  config.rs  crawler.rs  dates.rs  db.rs  extract.rs  index.rs  lib.rs  reranker.rs  search.rs
crates/core/tests/: extraction_pipeline.rs
crates/core/tests/fixtures/: nav-only.html  saved-page.html
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  registry.rs  server.rs
docs/: AGENTS-SNIPPET.md  msrch_HLD.md  opus_review-2026-07-02.md  p0-index-durability-plan.md
docs/superpowers/plans/: 2026-07-15-document-extraction.md  2026-07-15-workspace-refactor.md  2026-07-16-config-path-min-similarity.md  2026-07-16-mcp-server.md  2026-07-16-query-ergonomics.md  2026-07-16-search-outcome.md
docs/superpowers/specs/: 2026-07-15-document-extraction-design.md  2026-07-16-config-path-min-similarity-design.md  2026-07-16-mcp-server-design.md  2026-07-16-query-ergonomics-design.md  2026-07-16-search-outcome-design.md
src/: chunker.rs  config.rs  crawler.rs  db.rs  embedding.rs  index.rs  main.rs  output.rs  reranker.rs  search.rs
