[package]
name = "msrch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = "56.2.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
confy = "2.0.0"
futures = "0.3.31"
ignore = "0.4.25"
indicatif = "0.18.3"
lancedb = "0.23.0"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tiktoken-rs = "0.9.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
