[package]
name = "msrch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = "58.3.0"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
confy = "2.0.0"
env_logger = "0.11"
futures = "0.3.31"
ignore = "0.4.25"
indicatif = "0.18.3"
lancedb = "0.31.0"
log = "0.4"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tiktoken-rs = "0.9.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
tree-sitter = "0.26.3"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
