[package]
name = "msrch"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "msrch"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
log.workspace = true
msrch-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
