[package]
name = "msrch-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
confy.workspace = true
futures.workspace = true
ignore.workspace = true
indicatif.workspace = true
lancedb.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
