[package]
name = "msrch-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arrow.workspace = true
chrono.workspace = true
dom_smoothie.workspace = true
ego-tree.workspace = true
futures.workspace = true
ignore.workspace = true
indicatif.workspace = true
lancedb.workspace = true
log.workspace = true
pdf-extract.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
